Adjust point range and color options in index.html

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     };
 
     // 点の設定
-    const minPoints = 10;
-    const maxPoints = 50;
+    const minPoints = 1;
+    const maxPoints = 20;
     const dotRadius = 12;
-    const colors = ["red", "green", "blue", "yellow", "magenta"];
+    const colors = ["red", "pink", "gray", "skyblue", "blue"];
 
     document.getElementById("generateBtn").onclick = () => {
       ctx.drawImage(img, 0, 0); // 元画像描き戻し
