Change image source from PNG to JPG

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     // 🔹 固定画像を読み込み
     let img = new Image();
-    img.src = "image.png"; // ← 使う元画像の名前
+    img.src = "image.jpg"; // ← 使う元画像の名前
 
     img.onload = () => {
       canvas.width = img.width;
