--- a/index.html
+++ b/index.html
@@ -37,7 +37,18 @@
     const minPoints = 1;
     const maxPoints = 20;
     const dotRadius = 12;
-    const colors = ["red", "pink", "gray", "skyblue", "blue"];
+    const colors = [
+  "#0000FF", // あお
+  "#000080", // 紺色
+  "#87CEFA", // 水色
+  "#FF0000", // 赤
+  "#FFC0CB", // ピンク
+  "#800080", // 紫
+  "#006400", // 深緑
+  "#008000", // 緑
+  "#7CFC00", // 黄緑
+  "#FFFF00"  // 黄色
+];
 
     document.getElementById("generateBtn").onclick = () => {
       ctx.drawImage(img, 0, 0); // 元画像描き戻し
