--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   
   <br>
   <canvas id="canvas"></canvas>
+  <br>
+
+  <br>
+  <h1>赤→Pf　青→Vn　緑→TPerc　黄→Perc
 
   <script>
     const imgInput = document.getElementById("imgInput");
